*7419* fix wrapping issue when second sidebar is enabled

--- a/styles/compiled.css
+++ b/styles/compiled.css
@@ -983,15 +983,12 @@ div.pkp_controllers_grid table {
   background-color:#ffffff;
   border-collapse:collapse;
 }
-div.pkp_controllers_grid thead, div.pkp_controllers_grid tr.gridRow td, div.pkp_controllers_grid tr.row_controls td, div.pkp_controllers_grid .empty td { border-bottom:1px solid #c8c7c7; }
+div.pkp_controllers_grid thead, div.pkp_controllers_grid tr.gridRow td, div.pkp_controllers_grid tr.row_controls td, div.pkp_controllers_grid .empty tr { border-bottom:1px solid #c8c7c7; }
 div.pkp_controllers_grid tr.category {
   border-bottom:1px solid #c8c7c7;
   border-top:1px solid #c8c7c7;
 }
-div.pkp_controllers_grid tbody.empty td {
-  padding-left:10px;
-  text-align:left;
-}
+div.pkp_controllers_grid tbody.empty td { padding-left:10px; }
 div.pkp_controllers_grid thead tr {
   height:30px;
   padding:4px 0;
@@ -1476,25 +1473,16 @@ a.pkp_common_disabled, a.pkp_common_disabled:hover { color:#666666; }
   z-index:10;
 }
 .pkp_page_header ul.submission_actions a { text-decoration:underline; }
-.pkp_page_header .submission_progress_wrapper { clear:both; }
-.pkp_page_header .submission_progress_highlight { clear:both; }
-.pkp_page_header .submission_progress_overlay {
+.pkp_page_header .submission_progress_wrapper {
   clear:both;
   padding-top:30px;
 }
+.pkp_page_header .submission_progress_highlight { clear:both; }
 .pkp_page_header .submission_progress_highlight li {
   padding-top:2px;
   width:124px;
   color:#ffffff;
   border-right:1px white solid;
-}
-.pkp_page_header .submission_progress_highlight li.overlay {
-  background-color:#5c8eb2;
-  padding-top:2px;
-}
-.pkp_page_header .submission_progress_highlight li.underlay {
-  background-color:#adcbdf;
-  padding-top:2px;
 }
 .pkp_page_header .submission_progress {
   overflow:hidden;
