--- a/styles/pages/index.less
+++ b/styles/pages/index.less
@@ -56,32 +56,18 @@
 
 	.submission_progress_wrapper {
 		clear: both;
+		padding-top: 30px;
 	}
 
 	.submission_progress_highlight {
 		clear: both;
 	}
 
-	.submission_progress_overlay {
-		clear: both;
-		padding-top: 30px;
-	}
-	
 	.submission_progress_highlight li {
 		padding-top: 2px;
 		width: 124px;
 		color: #ffffff;
 		border-right:1px white solid;
-	}
-
-	.submission_progress_highlight li.overlay {
-		background-color: #5c8eb2;
-		padding-top: 2px;
-	}
-
-	.submission_progress_highlight li.underlay {
-		background-color: #adcbdf;
-		padding-top: 2px;
 	}
 
 	.submission_progress {
